--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-odoo">
         <div class="container">
-            <a class="navbar-brand text-white" href="#">odoo</a>
+            <a class="navbar-brand text-white" href="#"><img class="logg" src="https://odoocdn.com/openerp_website/static/src/img/2016/logos/odoo_logo.svg"></a>
 
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarOdooContent">
                 <span class="navbar-toggler-icon"></span>
