--- a/index.html
+++ b/index.html
@@ -535,7 +535,7 @@
 
       <!-- Branding / descripción -->
       <div class="col-md-4 mb-4 footer-brand">
-        <h4 class="footer-logo mb-3">odoo</h4>
+        <div class="footer-logo mb-3"><img src="https://odoocdn.com/openerp_website/static/src/img/2016/logos/odoo_logo.svg" class="logg2"></div>
         <p class="footer-description">
           Odoo attempts to bring the best development experience to designers and
           developers by offering the tools needed for having a quick and solid
