--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 </head>
 
 <body>
-<div class="hero-wrapper">
 
+<!-- Header -->
+<div class="hero-wrapper">
+  <!-- Menu -->
     <nav class="navbar navbar-expand-lg navbar-odoo">
         <div class="container">
             <a class="navbar-brand text-white" href="#"><img class="logg" src="https://odoocdn.com/openerp_website/static/src/img/2016/logos/odoo_logo.svg"></a>
@@ -41,6 +43,7 @@
         </div>
     </nav>
 
+    <!--First Section -->
     <main class="hero-container container">
         <div class="row align-items-center g-0">
 
@@ -112,12 +115,13 @@
                             <a href="#" class="text-primary text-decoration-none small border-bottom border-1 border-dotted border-primary pb-1" style="border-bottom: dotted !important;">View all ›</a>
                         </div>
                     </div>
-                </div>
+            </div>
 
         </div>
     </main>
 </div>
 
+<!-- Tools -->
 <section class="awesome-section py-5">
   <div class="container">
     <div class="row align-items-center justify-content-between gy-5 d-flex flex-column-reverse flex-md-row">
@@ -175,6 +179,7 @@
   </div>
 </section>
 
+<!-- Features -->
 <section class="features-section py-5">
   <div class="container">
     <div class="row align-items-center gy-5">
@@ -216,6 +221,7 @@
   </div>
 </section>
 
+<!-- Technology -->
 <section class="technology-section py-5">
   <div class="container">
     <div class="row align-items-center gy-5 flex-column-reverse flex-lg-row">
@@ -223,7 +229,6 @@
       <div class="col-lg-6">
         <div class="tech-cards">
 
-          <!-- Columna izquierda -->
           <div class="tech-col left">
 
             <div class="tech-card profile-card">
@@ -245,7 +250,7 @@
 
           </div>
 
-          <!-- Columna derecha -->
+          <!-- Right column -->
           <div class="tech-col right">
 
             <div class="tech-card rating-card">
@@ -288,6 +293,7 @@
   </div>
 </section>
 
+<!-- Download -->
 <section class="hero-download py-5">
   <div class="container">
     <div class="row align-items-center g-5">
@@ -323,6 +329,7 @@
   </div>
 </section>
 
+<!-- Solutions -->
 <section class="solution-section py-5">
   <div class="container">
     <div class="solution-box">
@@ -347,6 +354,7 @@
   </div>
 </section>
 
+<!-- Awards -->
 <section class="awards-section py-5">
   <div class="container">
 
@@ -405,6 +413,7 @@
   </div>
 </section>
 
+<!-- Q&A -->
 <section class="helpful-section py-5">
   <div class="container">
     <h2 class="helpful-title">Helpful answers</h2>
@@ -514,8 +523,6 @@
 
 <footer class="site-footer text-white">
   <div class="container py-5">
-
-    <!-- CTA SUPERIOR · Estilo hero / call to action -->
     <div class="row align-items-center footer-cta mb-5">
       <div class="col-md-8">
         <h2 class="fw-bold">Brilliant solutions for your ideas</h2>
@@ -530,10 +537,8 @@
 
     <hr class="footer-divider">
 
-    <!-- CONTENIDO PRINCIPAL · Branding + navegación -->
     <div class="row pt-4 footer-main">
 
-      <!-- Branding / descripción -->
       <div class="col-md-4 mb-4 footer-brand">
         <div class="footer-logo mb-3"><img src="https://odoocdn.com/openerp_website/static/src/img/2016/logos/odoo_logo.svg" class="logg2"></div>
         <p class="footer-description">
@@ -550,7 +555,6 @@
         </div>
       </div>
 
-      <!-- Navegación en FLEX -->
       <div class="col-md-8">
         <div class="actions">
           <nav class="btns-part">
@@ -586,8 +590,6 @@
     </div>
 
     <hr class="footer-divider">
-
-    <!-- LEGAL · Estilo minimal / footer base -->
     <div class="d-flex flex-column flex-md-row justify-content-between small footer-legal">
       <span>© Odoo. All rights reserved</span>
 
